# CloudflareSpeedTest-Rust

./: Cargo.toml  README-en_US.md  README.md
.github/workflows/: build-arm.yml  build.yml
src/: main.rs
src/controller/: download_controller.rs  mod.rs  ping_controller.rs  real_delay_controller.rs
src/data/: ips.rs  mod.rs
src/i18n/: en_us.rs  interface.rs  mod.rs  zh_cn.rs
src/utils/: args.rs  bulk_ping.rs  download.rs  get_all_ips.rs  ipv6_range.rs  mod.rs  pick_usize.rs  ping.rs  real_delay.rs
