[package]
name = "cfst"
version = "2.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.20.1", features = ["rt", "rt-multi-thread", "macros"] }
surge-ping = "0.7.0"
iprange = "0.6.7"
ipnet = "2.4.0"
futures = "0.3.21"
random-number = "0.1.7"
indicatif = "0.16.2"
relative-path = "1.7.0"
dialoguer = "0.10.0"
clap = { version = "3.1.6", features = ["derive"] }
rand = { version = "0.8.5", features = ["small_rng"] }
async-recursion = "1.0.0"
